# mcp-ical

./: .gitignore  CALENDAR_GROUPS_IMPLEMENTATION.md  CALENDAR_GROUPS_REQUIREMENTS.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
docs/: ARCHITECTURE.md  Journey.md  TECHNICAL_NOTES.md  alfred-setup.md  install.md  testing-plan.md
src/mcp_ical/: ical.py  models.py  server.py
src/mcp_ical/groups/: __init__.py  calendar_integration.py  group_manager.py  group_models.py  group_tools.py  storage.py
tests/: test_calendar_manager_integration.py  test_nstaggeddate_fix.py
tests/groups/: test_calendar_integration.py  test_group_manager.py  test_group_models.py  test_group_tools_simple.py  test_storage.py
