[project]
name = "mcp-ical"
version = "0.1.0"
description = "A Model Context Protocol server providing tools for CRUD operations for the mac-os calendar"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["loguru>=0.7.3", "mcp[cli]>=1.2.1", "pyobjc>=11.0"]

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-mock>=3.14.0", "pytest-random-order>=1.1.1", "pytest-asyncio>=0.21.0"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py312"

[project.scripts]
mcp-ical = "mcp_ical.server:main"
